name:                alerts
version:             0.1.0.0
synopsis:            Alerts for web applications
description:         Alert messages for web applications:
    .
    * Bootstrap 3
    .
    * Bootstrap 4
    .
    * Foundation
    .
    * Custom
homepage:            https://github.com/alx741/alerts#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Campoverde
maintainer:          alx@sillybytes.net
copyright:           2017 Daniel Campoverde
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Alert
                     , Web.Alert.Renderer.Bootstrap3
  other-modules:       Web.Alert.Renderer.Common
  ghc-options:         -Wall -fwarn-tabs -O2
  build-depends:       base >= 4.7 && < 5
                     , text >= 0.11 && < 2.0
                     , blaze-html
  default-language:    Haskell2010

executable alerts-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , alerts
  default-language:    Haskell2010

test-suite alerts-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , alerts
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alx741/alerts
